fix(ci): remove old jvm properties from cambpm container
- not supported since cambpm 7.12

relates to #OPT-2953